k8s/grocy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  labels:
    app: grocy
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: grocy
