k8s/grocy/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grocy
spec:
  rules:
  - host: grocy.server.lemira
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: grocy
            servicePort: 80
